 * When opening the Import Height Map or Import Mask screens, the file selection dialog is now immediately shown
 * It is now possible to add a Nether or End dimension to Imported worlds
 * Crimson and Warped stems and hyphae are now treated as "logs" for purposes of leaf distance calculations
 * Bug fix: selecting a paint from the map from the Global Operations screen now works more than once
 * Bug fix: selecting a paint from the map does not crash inside the selection (or when other system layers are present)
 * Bug fix: Merging a world that was not Imported will no longer cause it to be considered an Imported world afterwards

-- Version 2.17.2, released 21-5-2023

 * The Eyedropper is now also available for selecting paints for the operations on the Global Operations screen
 * Bug fix: the Flatten tool no longer allows you to initiate it outside the bounds of the world
 * Small usability improvement

-- Version 2.17.1, released 13-5-2023

 * A new Eyedropper tool has been introduced that allows you to select paints directly from the map
   + It is available on the Tools panel in the shape of an eyedropper
   + It may also be activated by pressing Alt+y
   + To cancel without selecting anything, press the Esc key
   + The "only on" and "except on" brush settings filter menus now also have a "Select on Map" choice which allows you to similarly select the value from the map
     - This also applies to the filter on the Global Operations screen
   + In the near future this support will be extended to other places where a paint is selected, such as the terrain, layer and biome drop-downs on the Global Operations screen and other places
 * Icons and other UI elements are now scaled smoothly according to the UI scale setting, rather than only at integer increments, to make the UI scaling more consistent
 * Scripting: it is now possible to specify the lower and upper build limits of newly created worlds